tests/checker/ok/numeric_literals.can
Unit => Program {
    42 -> Print
    1.0 -> Print
}
