tests/checker/fail/comment_not_allowed.can
// comments do not exist
Unit => Program {
    "hi" -> Print
}
